--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">MyAppG2</string>
+
+    <string name="splash_welcome">Welcome to My App</string>
+
+    <string name="login_signup">Dont have an account? Signup Here</string>
+
+    <string name="signup_message">User Signup Page</string>
+    <string name="signup_first_name">First Name</string>
+    <string name="signup_last_name">Last Name</string>
+    <string name="signup_email">Email</string>
+    <string name="signup_password">Password</string>
+    <string name="signup_confirm">Confrim Password</string>
+    <string name="signup_signup_button">Signup</string>
+    <string name="signup_login">Already have an account? Login here</string>
+
 </resources>
